<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="app1_name">Spotify Streamer</string>
    <string name="app2_name">Scores App</string>
    <string name="app3_name">Library App</string>
    <string name="app4_name">Build It Bigger</string>
    <string name="app5_name">XYZ Reader</string>
    <string name="app6_name">Capstone: My Own App</string>
</resources>
