<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.flaiker.appportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/title"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@android:color/white" />

    <Button
        style="@style/AppStartButtonStyle"
        android:tag=""
        android:text="@string/app1_name" />

    <Button
        style="@style/AppStartButtonStyle"
        android:tag=""
        android:text="@string/app2_name" />

    <Button
        style="@style/AppStartButtonStyle"
        android:tag=""
        android:text="@string/app3_name" />

    <Button
        style="@style/AppStartButtonStyle"
        android:tag=""
        android:text="@string/app4_name" />

    <Button
        style="@style/AppStartButtonStyle"
        android:tag=""
        android:text="@string/app5_name" />

    <Button
        style="@style/AppStartButtonStyle"
        android:backgroundTint="@color/colorPrimary"
        android:tag=""
        android:text="@string/app6_name" />

</LinearLayout>
